# denoizeit

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml  pyrightconfig.json  shell.nix
src/: config.py  utils.py
src/cli/: cli.py
src/model/: __init__.py  activation_function.py  attention.py  unet.py
src/model_factory/: __init__.py  abc.py  hf.py  local_fs.py
src/pipeline/: __init__.py  abc.py  inference.py  pipeline.py  postprocess.py  preprocess.py
tests/: conftest.py  test_cli.py  test_inference.py  test_model_factory.py  test_pipeline.py  test_postprocess.py  test_preprocess.py
tests/data/: mask.pth  noisy_in.pth  wav.pth  win.pth
