[project]
name = "denoizeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pydantic-settings>=2.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "dotenv>=0.9.9",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "black",
    "isort"
]

[tool.coverage.run]
omit = [
    "**/abc.py",
    "config.py",
]

[tool.pylint.design]
min-public-methods = 0
