[project.scripts]
denoizeit = "src.cli.cli:app"

[project]
name = "denoizeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "complexpytorch>=0.4",
    "huggingface-hub>=1.10.1",
    "numpy>=2.2.6",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "sounddevice>=0.5.5",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "dotenv>=0.9.9",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "black",
    "isort",
    "pip>=26.0.1",
    "ruff>=0.15.10",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B615"]

[tool.coverage.run]
omit = [
    "**/abc.py",
    "config.py",
]

[tool.pylint.design]
min-public-methods = 0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
